--- a/Desarrollo/Frontend/src/app/components/footer/footer.component.html
+++ b/Desarrollo/Frontend/src/app/components/footer/footer.component.html
@@ -8,7 +8,7 @@
                 <ul class="list-inline">
                     <li class="list-inline-item"><a target="_blank" href="https://ice.uabjo.mx">Acerca de Nosotros</a></li>
                     <li class="list-inline-item"><a target="_blank" href="https://www.facebook.com/iceuabj0"><i class="fab fa-facebook-f"></i></a></li>
-                    <li class="list-inline-item"><a target="_blank" href="https://x.com/ICE_UABJO"><i class="fab fa-x"></i></a></li>
+                    <li class="list-inline-item"><a target="_blank" href="https://x.com/ICE_UABJO"><i class="fab fa-twitter"></i></a></li>
                     <li class="list-inline-item"><a target="_blank" href="https://www.instagram.com/iceuabjo/"><i class="fab fa-instagram"></i></a></li>
                 </ul>
             </div>
