--- a/Desarrollo/Frontend/src/app/pages/profesor/profesor.component.html
+++ b/Desarrollo/Frontend/src/app/pages/profesor/profesor.component.html
@@ -2,22 +2,27 @@
 <div class="container mt-2 mb-4">
     <div class="row mt-2">
         <div class="col text-center">
-            <h2>{{detalle.nombre}}</h2>
+            <h1>{{detalle.nombre}}</h1>
             <br>
             <img src="{{detalle.imagen}}" class="img-fluid" alt="{{detalle.nombre}}">
             <br>
             <br>
+            <div class="contenido-separado">
+                <div class="lineas-investigacion">
+                    <p><strong>Líneas de investigación</strong><br>{{detalle.ocupacion}}</p>
+                </div>
+                
+            </div>
+            <br>
+            <br>
+            <p style="font-size: xx-large;"><strong>Semblanza</strong>
             <p class="descripcion">{{detalle.descripcion}}</p>
+            <div class="d-flex justify-content-center"> 
+                <a *ngIf="detalle.drive" [href]="detalle.drive" target="_blank" class="btn btn-success mt-2 px-3 py-2">
+                    Ver publicaciones
+                </a>
+            </div>
         </div>
     </div>
-    <div class="contenido-separado">
-        <div class="lineas-investigacion">
-            <p><strong>Líneas de investigación</strong><br>{{detalle.ocupacion}}</p>
-        </div>
-        <div class="d-flex justify-content-center"> 
-            <a *ngIf="detalle.drive" [href]="detalle.drive" target="_blank" class="btn btn-success mt-2 px-3 py-2">
-                Ver publicaciones
-            </a>
-        </div>
-    </div>
+
 </div>
